report ficha médica

--- a/seguridad_ocupacional/views/ficha_medica.xml
+++ b/seguridad_ocupacional/views/ficha_medica.xml
@@ -4,8 +4,28 @@
             <field name="name">Hoja Evolución</field>
             <field name="res_model">seguridad.hoja_evolucion</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,graph</field>
 
+        </record>
+
+       <record model="ir.ui.view" id="hoja_graph_view">
+            <field name="name">hoja.graph</field>
+            <field name="model">seguridad.hoja_evolucion</field>
+            <field name="arch" type="xml">
+                <graph string="Atenciones por Empleado">
+                    <field name="name"/>
+                </graph>
+            </field>
+        </record>
+
+       <record model="ir.ui.view" id="course_graph_view">
+            <field name="name">course.graph</field>
+            <field name="model">seguridad.ficha</field>
+            <field name="arch" type="xml">
+                <graph string="Fichas por Empleado">
+                    <field name="name"/>
+                </graph>
+            </field>
         </record>
 
        <record model="ir.ui.view" id="seguridad_hoja_form_view">
@@ -260,7 +280,7 @@
             <field name="name">Ficha Médica</field>
             <field name="res_model">seguridad.ficha</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,graph</field>
             <field name="help" type="html">
                 <p class="oe_view_nocontent_create">Crear la primera ficha médica
                 </p>
