--- a/seguridad_ocupacional/views/hoja_evolucion.xml
+++ b/seguridad_ocupacional/views/hoja_evolucion.xml
@@ -6,9 +6,19 @@
             <field name="name">Hoja Evolución</field>
             <field name="res_model">seguridad.hoja_evolucion</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-
+            <field name="view_mode">tree,form,graph</field>
         </record>
+
+       <record model="ir.ui.view" id="hoja_graph_view">
+            <field name="name">hoja.graph</field>
+            <field name="model">seguridad.hoja_evolucion</field>
+            <field name="arch" type="xml">
+                <graph string="Atenciones por Empleado">
+                    <field name="name"/>
+                </graph>
+            </field>
+        </record>
+
 
 
        <record model="ir.ui.view" id="seguridad_hoja_tree_view">
