--- a/service_desk/views/website_project_detail_ticket.xml
+++ b/service_desk/views/website_project_detail_ticket.xml
@@ -39,5 +39,23 @@
         </div>
       </t>
  </template>
+
+ <template id="issue_thank_you" name="Support Ticket Thank You" page="True">
+            <t t-call="website.layout">
+                <div id="wrap" class="oe_structure oe_empty">
+                    <section>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h1 class="text-center">Gracias</h1>
+                                    <h3 class="text-muted text-center">Nos pondremos en contacto contigo</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </t>
+ </template>
+
   </data>
 </odoo>
