--- a/service_desk/views/project_issue.xml
+++ b/service_desk/views/project_issue.xml
@@ -25,8 +25,13 @@
                     <field name="type" string = "Tipo de Contacto"/>
                 </xpath>
                 <xpath expr="//field[@name='task_id']" position="after">
+                    <field name="supercategoria" string = "Categoría Usuario"/>
+                </xpath>
+                <xpath expr="//field[@name='task_id']" position="after">
                     <field name="tipo" string = "Gestión"/>
                 </xpath>
+
+
             </field>
         </record>
 
