--- a/service_desk/views/website_project_detail_ticket.xml
+++ b/service_desk/views/website_project_detail_ticket.xml
@@ -34,6 +34,9 @@
                 </t>
                   </tbody>
               </table>
+               <div t-if="pager" class="o_portal_pager text-center">
+              <t t-call="website.pager"/>
+            </div>
 
           </div>
         </div>
