--- a/service_desk/views/project_issue.xml
+++ b/service_desk/views/project_issue.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="bi_project_issue_inherit_field_sequence_name" model="ir.ui.view">
@@ -30,10 +30,21 @@
                 <xpath expr="//field[@name='task_id']" position="after">
                     <field name="tipo" string = "Gestión"/>
                 </xpath>
+                <xpath expr="//field[@name='stage_id']" position="after">
 
+                    <button name="signal_pendiente" type="object" string="Asignar"
+                                    states="1abierto" class="oe_highlight" groups ="project.group_project_manager"/>
+                    <button name="signal_resuelto" type="object" string="Resolver"
+                                    states="2pendiente,3escalado" class="oe_highlight"/>
+                    <button name="signal_escalar" type="object" string="Escalar"
+                                    states="2pendiente" class="oe_highlight"/>
+                    <button name="signal_cerrado" type="object" string="Cerrar" confirm="Seguro de Cerrar el caso ?"
+                                    states="4resuelto" class="oe_highlight"/>
+                    <field name="state" widget="statusbar"/>
+                </xpath>
 
             </field>
         </record>
 
     </data>
-</openerp>
+</odoo>
