--- a/service_desk/views/project_issue_workflow.xml
+++ b/service_desk/views/project_issue_workflow.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <!-- Contract Workflow Definition -->
@@ -12,27 +12,70 @@
         <!-- Workflow Activities (Stages) -->
         <record id="act_abierto" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">abierto</field>
+            <field name="name">1abierto</field>
             <field name="kind">function</field>
-            <field name="action">write({'stage_id.name': 'Abierto'})</field>
+            <field name="action">write({'state': '1abierto'})</field>
             <field name="flow_start">True</field>
+        </record>
+
+        <record id="act_pendiente" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_issue"/>
+            <field name="name">2pendiente</field>
+            <field name="kind">function</field>
+            <field name="action">write({'state': '2pendiente'})</field>
+        </record>
+
+        <record id="act_escalar" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_issue"/>
+            <field name="name">3escalado</field>
+            <field name="kind">function</field>
+            <field name="action">write({'state': '3escalado'})</field>
+        </record>
+
+        <record id="act_resuelto" model="workflow.activity">
+            <field name="wkf_id" ref="wkf_project_issue"/>
+            <field name="name">4resuelto</field>
+            <field name="kind">function</field>
+            <field name="action">write({'state': '4resuelto'})</field>
         </record>
 
         <record id="act_cerrado" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">Cerrado</field>
+            <field name="name">5cerrado</field>
             <field name="kind">function</field>
-            <field name="action">write({'stage_id.name': 'Cerrado'})</field>
+            <field name="action">write({'state': '5cerrado'})</field>
             <field name="flow_stop">True</field>
         </record>
 
 
 
          <!-- Workflow Transitions -->
-        <record id="abierto2asignado" model="workflow.transition">
+        <record id="abierto2pendiente" model="workflow.transition">
             <field name="act_from" ref="act_abierto"/>
-            <field name="act_to" ref="act_asignado"/>
-            <field name="signal">signal_confirm</field>
+            <field name="act_to" ref="act_pendiente"/>
+            <field name="kind">function</field>
+            <field name="action">signal_pendiente</field>
+        </record>
+        <record id="pendiente2resuelto" model="workflow.transition">
+            <field name="act_from" ref="act_pendiente"/>
+            <field name="act_to" ref="act_resuelto"/>
+            <field name="signal">signal_resuelto</field>
+        </record>
+        <record id="pendiente2escalado" model="workflow.transition">
+            <field name="act_from" ref="act_pendiente"/>
+            <field name="act_to" ref="act_escalar"/>
+            <field name="signal">signal_escalar</field>
+        </record>
+        <record id="escalado2resuelto" model="workflow.transition">
+            <field name="act_from" ref="act_escalar"/>
+            <field name="act_to" ref="act_resuelto"/>
+            <field name="signal">signal_resuelto</field>
+        </record>
+
+        <record id="resuelto2cerrado" model="workflow.transition">
+            <field name="act_from" ref="act_resuelto"/>
+            <field name="act_to" ref="act_cerrado"/>
+            <field name="signal">signal_cerrado</field>
         </record>
     </data>
-</openerp>
+</odoo>
