--- a/service_desk/views/project_issue_workflow.xml
+++ b/service_desk/views/project_issue_workflow.xml
@@ -12,38 +12,38 @@
         <!-- Workflow Activities (Stages) -->
         <record id="act_abierto" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">Abierto</field>
+            <field name="name">1.Abierto</field>
             <field name="kind">function</field>
-            <field name="action">write({'state': 'Abierto'})</field>
+            <field name="action">write({'state': '1.Abierto'})</field>
             <field name="flow_start">True</field>
         </record>
 
         <record id="act_pendiente" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">Pendiente</field>
+            <field name="name">2.Pendiente</field>
             <field name="kind">function</field>
-            <field name="action">write({'state': 'Pendiente'})</field>
+            <field name="action">write({'state': '2.Pendiente'})</field>
         </record>
 
         <record id="act_escalar" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">escalado</field>
+            <field name="name">3.Escalado</field>
             <field name="kind">function</field>
-            <field name="action">write({'state': 'Escalado'})</field>
+            <field name="action">write({'state': '3.Escalado'})</field>
         </record>
 
         <record id="act_resuelto" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">Resuelto</field>
+            <field name="name">4.Resuelto</field>
             <field name="kind">function</field>
-            <field name="action">write({'state': 'Resuelto'})</field>
+            <field name="action">write({'state': '4.Resuelto'})</field>
         </record>
 
         <record id="act_cerrado" model="workflow.activity">
             <field name="wkf_id" ref="wkf_project_issue"/>
-            <field name="name">Cerrado</field>
+            <field name="name">5.Cerrado</field>
             <field name="kind">function</field>
-            <field name="action">write({'state': 'Cerrado'})</field>
+            <field name="action">write({'state': '5.Cerrado'})</field>
             <field name="flow_stop">True</field>
         </record>
 
